FIX: added allowed origins to cors