@@ -24,6 +24,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Configuration
@@ -59,12 +60,16 @@ public class SecurityConfig {
 
     @Bean
     CorsConfigurationSource customCorsConfigSource() {
+        List<String> allowedOrigins = List.of(
+                "http://localhost:5173",
+                "https://wallpapers-client.onrender.com"
+        );
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.addAllowedOrigin("http://localhost:5173");
-        config.setAllowedMethods(Arrays.asList("POST", "OPTIONS", "GET", "DELETE", "PUT"));
-        config.setAllowedHeaders(Arrays.asList("X-Requested-With", "Origin", "Content-Type", "Accept", "Authorization"));
+        config.setAllowedOrigins(allowedOrigins);
+        config.setAllowedMethods(List.of("POST", "OPTIONS", "GET", "DELETE", "PUT"));
+        config.setAllowedHeaders(List.of("X-Requested-With", "Origin", "Content-Type", "Accept", "Authorization"));
         source.registerCorsConfiguration("/**", config);
         return source;
     }
